--- a/style.css
+++ b/style.css
@@ -17,17 +17,18 @@ body {
 	margin: 0;
 	padding: 0;
 	cursor: none;
+	width: 100%;
+	height:100%;
 }
 .content {
 	position: relative;
 	width: 100vw;
 	height: 100vh;
 	height: 100dvh;
-	min-height: 60rem;
-	max-height: 120rem;
 	margin: 0;
 	display: flex;
 	flex-direction: column;
+	overflow-x: hidden;
 }
 
 /* Custom cursor */
@@ -494,8 +495,10 @@ input[type=submit] {
 #container5 ul {
 	list-style-type: none;
 	margin-left: 6vw;
-	padding-block: 1rem;
+	padding-block: 2vh;
 	margin-bottom: 0;
+	margin-top: 0;
+	padding-inline: 0;
 }
 #container5 ul li {
 	display: inline-block;
@@ -662,11 +665,11 @@ input[type=submit] {
 	}
 	.logo {
 		padding-top:2rem;
-		height:120%;
+		height:6rem;
 	}
 	.headercontent h1{
-		font-size: 4.9rem;
-		line-height: 5.4rem;
+		font-size: 4.5rem;
+		line-height: 5 rem;
 	}
 	.headercontent{
 		padding-inline: 1rem;
@@ -722,6 +725,9 @@ input[type=submit] {
         height: 225%;
         overflow: auto;
     }
+	#container5 ul {
+		margin-left: 1rem;
+		}
 		
 }
 /*mobile width*/
@@ -755,7 +761,10 @@ input[type=submit] {
 	}
 	.logo {
 		padding-top:2rem;
-		height:120%;
+		height:6rem;
+	}
+	.headercontent{
+		padding-inline: 1rem;
 	}
 	.headercontent h1{
 		font-size: 4.9rem;
@@ -805,6 +814,8 @@ input[type=submit] {
 		width:100vw;
 		min-width: 100vw;
 		min-height: 100vh;
+		height: 100vh;
+		height: 100dvh;
 		border-radius: 0;
 	}
 	.column8{
@@ -813,10 +824,15 @@ input[type=submit] {
 		padding-inline: 2rem;
 		justify-content:space-between;
 		box-shadow: none;
+		overflow: auto;
 	}
 	#closeButton {
 		margin-right: -1rem;
 	}
+	#container5 ul {
+        margin-left: 1rem;
+		padding-inline:0;
+    }
 }
 /*large screens_imac*/
 @media only screen and (min-width: 1728px) and (max-width: 2560px)  {
