--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@ input[type=submit] {
 	}
 }
 /* ipads tablet landscape */
-@media screen and (max-width: 1200px) and (orientation: landscape) and (pointer:coarse){
+@media screen and (max-width: 1280px) and (orientation: landscape) {
 	/* container 1 */	
 	#row1,.headercontent{
 		height: 78vh;
